--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Меня зовут Евгений. Это мой первый проект.</h1>
-программа
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Мой первый документ</title>
+</head>
+
+<body>
+</body>
+</html>
