--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Первый сайт</title>
 </head>
 <h1>Всем привет! Меня зовут Евгений, и это мой первый сайт!</h1>
 <p>Я из города Тайги.</p>
@@ -13,4 +13,5 @@
 </body>
 
 </html>
+
 
