--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Первый сайт</title>
 </head>
-<h1>Всем привет! Меня зовут Евгений, и это мой первый сайт!</h1>
-<p>Я из города Тайги.</p>
-<p><img alt="Прикольный" src="15.jpg"></p>
-<p><a href="http://kirova39.tb.ru">Ссылка на сайт</a></p>
+<body>
+    
+<h1 style="text-align: center;">Всем привет! Меня зовут Евгений, и это мой первый сайт!</h1>
+<p align="center">Я из города Тайги.</p>
+<p align="center"><img alt="Прикольный" src="15.jpg"></p>
+<p align="center"><a href="http://kirova39.tb.ru">Ссылка на сайт</a></p>
 
 </body>
 
 </html>
+
 
 
