--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-<h1 style="text-align: center;">Всем привет! Меня зовут Евгений, и это мой первый сайт!</h1>
+<h1 align="center">Всем привет! Меня зовут Евгений, и это мой первый сайт!</h1>
 <p align="center">Я из города Тайги.</p>
 <p align="center"><img alt="Прикольный" src="15.jpg"></p>
 <p align="center"><a href="http://kirova39.tb.ru">Ссылка на сайт</a></p>
@@ -15,6 +15,7 @@
 </body>
 
 </html>
+
 
 
 
