--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Меню</title>
 </head>
 <body>
+	<h3>Создание меню с помощью списков и относительных ссылок</h3>
     <ul>
 	<li><a href="index.html">Главная</a></li>
 	<li><a href="task1.html">Первая страница</a></li>
 	<li><a href="task2.html">Вторая страница</a></li>
 </ul>
 </body>
+
 </html>
