--- a/task1.html
+++ b/task1.html
@@ -6,10 +6,12 @@
     <title>Первая страница</title>
 </head>
 <body>
+	<h3>Это наша первая страница</h3>
     <ul>
 	<li><a href="index.html">Главная</a></li>
 	<li><a href="task1.html">Первая страница</a></li>
 	<li><a href="task2.html">Вторая страница</a></li>
 </ul>
 </body>
+
 </html>
