--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Меню</title>
 </head>
 <body>
-	<h3>Создание меню с помощью списков и относительных ссылок</h3>
+	<h3>Это главная страница</h3>
     <ul>
 	<li><a href="index.html">Главная</a></li>
 	<li><a href="task1.html">Первая страница</a></li>
@@ -15,3 +15,4 @@
 </body>
 
 </html>
+
