--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <table align="center" border="1" cellpadding="1" cellspacing="1" style="width:500px">
 	<tbody>
 		<tr>
-			<td style="text-align:center"><strong>Заголовок 1</strong></td>
-			<td style="text-align:center"><strong>Заголовок 2</strong></td>
-			<td style="text-align:center"><strong>Заголовок 3</strong></td>
+			<th><strong>Заголовок 1</strong></th>
+			<th><strong>Заголовок 2</strong></th>
+			<th><strong>Заголовок 3</strong></th>
 		</tr>
 		<tr>
 			<td style="text-align:center">еда 1</td>
@@ -52,4 +52,5 @@
 </table>
 
 </body>
+
 </html>
