--- a/box/task2.html
+++ b/box/task2.html
@@ -107,7 +107,7 @@
         <img src="2.jpg" alt="Камчатка" width="400px"><br>
         <p>Камчатка - край вулканов и гейзеров.</p>
         <h2>Алтай</h2>
-        <img src="2.jpg" alt="Камчатка" width="400px"><br>
+        <img src="3.jpg" alt="Алтай" width="400px"><br>
         <p>Алтай - горный край с уникальной природой.</p>
         <p>Больше фотографий вы сможете найти на наших ресурсах:</p>
         <ul style="padding-left: 20px;">
@@ -187,4 +187,5 @@
         <p style="text-align: center;">&copy; 2025 Путешествия по России. Все права защищены.</p>
     </div>
 </body>
+
 </html>
