--- a/box2/task3.html
+++ b/box2/task3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 3</title>
+    <link rel="stylesheet" href="reset.css">
      <link rel="stylesheet" href="task3css.css">
 </head>
 <body>
@@ -104,4 +105,5 @@
                                  
     </div>
 </body>
+
 </html>
