--- a/box2/task3.html
+++ b/box2/task3.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 3</title>
-    <link rel="stylesheet" href="task3css.css">
+    <link rel="stylesheet" href="reset.css">
+     <link rel="stylesheet" href="task3css.css">
 </head>
 <body>
     <div class="header">
@@ -16,17 +17,17 @@
     </div>
    <div class="top"> <h1>Нейронные сети: искусственный интелект сегодня.</h1>
     <p>Исследуй мир машинного обучения и нейронных сетей - <br>
-    технологий, меняющих нашу реальность. </p>
+    технологий, меняющих нашу реальность. </p><br><br>
     <button class="btn1" popovertarget="my-popover">Вот, как нужно писать код!</button>
 
 <div id="my-popover" popover>
  <object width="400" height="300" data="your_animation.swf">
-  <embed src="1.webp" width="400" height="300">
+  <embed src="1.webp" width="400" height="300" style="position: fixed; top: 5%; left: 5%;">
 </object>
 </div>
 
 </div>
-    <h2 id="a" style="color: white; text-align: center;" >Где применяются нейросети?</h2>
+    <h2 id="a" style="color: white; text-align: center;">Где применяются нейросети?</h2><br>
 <!--Три горизонтальных блока-->
     <div class="flex-container">
   <div class="flex-item">
@@ -104,6 +105,4 @@
                                  
     </div>
 </body>
-
 </html>
-
