--- a/box2/task3.html
+++ b/box2/task3.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 3</title>
-   
-     <link rel="stylesheet" href="task3css.css">
+    <link rel="stylesheet" href="task3css.css">
 </head>
 <body>
     <div class="header">
@@ -22,7 +21,7 @@
 
 <div id="my-popover" popover>
  <object width="400" height="300" data="your_animation.swf">
-  <embed src="1.webp" width="400" height="300" style="position: fixed; top: 5%; left: 5%;">
+  <embed src="1.webp" width="400" height="300">
 </object>
 </div>
 
@@ -104,3 +103,4 @@
 </body>
 
 </html>
+
