--- a/box2/task3.html
+++ b/box2/task3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 3</title>
 <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="standart.css">
   <link rel="stylesheet" href="task3css.css">
    
 </head>
@@ -114,3 +115,4 @@
 </body>
 
 </html>
+
