--- a/IAR/index.html
+++ b/IAR/index.html
@@ -25,9 +25,9 @@
     </div>
     <!-- Меню -->
     <div class="nav-menu" id="menu">
-      <a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">О нас</a>
-      <a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">Как помочь</a>
-      <a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">Наши проекты</a>
+      <a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">О нас</a>
+      <a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">Как помочь</a>
+      <a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">Наши проекты</a>
     </div>
     </div>
   </header>
@@ -46,7 +46,7 @@
 
 <h2><b>Новости</b></h2>
 <div class="short-hr"></div>
-<h3><a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">Читать все новости...</a></h3>
+<h3><a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">Читать все новости...</a></h3>
  <div class="co">
     <div class="row-three">
       <div class="block">
@@ -138,10 +138,10 @@
 
       <!-- Список ссылок -->
   <ul class="styled-list_1">
-  <li><a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">РЕКВИЗИТЫ</a></li>
-  <li><a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">ПУБЛИЧНАЯ ОФЕРТА</a></li>
-  <li><a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">info@naturepeople.ru</a></li>
-  <li><a href="#" onclick="alert('Извените, но это одностраничный сайт'); return false;">+74957271447</a></li>
+  <li><a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">РЕКВИЗИТЫ</a></li>
+  <li><a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">ПУБЛИЧНАЯ ОФЕРТА</a></li>
+  <li><a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">info@naturepeople.ru</a></li>
+  <li><a href="#" onclick="alert('Чтобы попасть на вторую страницу учебного проекта, нажмите на кнопку Помогай природе регулярно'); return false;">+74957271447</a></li>
 </ul>
 
       <!-- Форма подписки -->
