--- a/IAR/pay.html
+++ b/IAR/pay.html
@@ -129,7 +129,7 @@ body {
 <img src="logo.png">
     </div>
 
-  <form class="donation-form" action="№" method="POST">
+  <form class="donation-form" action="#" method="POST">
     <h2>Пожертвование</h2>
 
     <div class="form-group">
